NewZealandPOC/deployment/manifests/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nz-poc-server-deploy
  namespace: cicd-test
  labels:
    app: nz-poc-server-deploy
    env: nz-poc
spec:
  replicas: 1
  template:
    metadata:
      labels:
          app: nz-poc-server-deploy
          env: nz-poc
    spec:
      containers:
      - name: nz-poc-server
        image: deploymentcoe.vodafone.skytapdns.com/nz-poc-server-deploy
        imagePullPolicy: Always
        ports:
         - containerPort: 8080
      imagePullSecrets:
      - name: demo-sec
