NewZealandPOC/deployment/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nz-poc-server-svc
  namespace: cicd-test
spec:
  type: NodePort
  selector:
        app: nz-poc-server-deploy
        env: nz-poc
  ports:
  - name: nz-poc-server-port
    port: 9099
    targetPort: 8080
  externalIPs:
    - 10.0.0.6
