NewZealandPOC/deployment/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nz-poc-server-ingress
  namespace: cicd-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: k8s.io
    http:
      paths:
      - backend:
          serviceName: nz-poc-server-svc
          servicePort: 9099
        path: /nz/*
